--- a/迭代二/项目文档/项目重构设计文档.md
+++ b/迭代二/项目文档/项目重构设计文档.md
@@ -17,7 +17,7 @@ SentiStrength 项目的重构设计文档。
 
 本文档主要描述了在迭代二中进行的重构工作，每个重构部分包含对问题背景、重构方案、效果、进一步优化方向等的描述。
 
-## 参数获取
+## ArgParser
 
 ### 问题
 
@@ -128,7 +128,7 @@ SentiStrength 项目的重构设计文档。
 
 由于 Java 不可以传递栈变量的指针，在实现 `Argparse` 时只能先把参数值保存到其内部 `Map` 中，再从 `Map` 里把值取回本地变量。虽然 Python 的 `Argparse` 也是这么干的（他用了一个 namespace object，等价于 `map`），但效率上肯定还是没有在 `Argparse` 中直接解析指针赋值快。关于这一点后续可以考虑继续优化。
 
-## SentiStrength 交互接口
+## 交互接口
 
 ### 问题
 
@@ -162,7 +162,7 @@ private void listenForCmdInput(Corpus c) {
 重构中采用了分层设计的思想，大致逻辑如下：
 
 ```mermaid
-flowchart TD
+flowchart LR
 	subgraph application
     port[listenAtPort]
     cmd[listenForCmdInput]
@@ -208,7 +208,7 @@ flowchart TD
 
 这里几个接口的功能其实对于目前的使用场景来说是没用的，在后续迭代中可以视情况删除。
 
-## ClassificationResources 资源抽象
+## Resource & ResourceFactory
 
 ### 问题
 
@@ -286,7 +286,7 @@ class ResourceFactory {
   + buildResource(Class~Resource~, String, ClassificationOptions, int) T
 }
 class SimpleResourceFactory {
-  # SimpleResourceFactory() 
+  # SimpleResourceFactory()
   + buildResource(Class~Resource~, String, ClassificationOptions, int) T
    SimpleResourceFactory instance
 }
@@ -305,9 +305,9 @@ class ResourceEntry {
 }
 
 
-SimpleResourceFactory  ..|>  ResourceFactory 
-CachedResourceFactory  --|>  SimpleResourceFactory 
-CachedResourceFactory "1" *--> "storage *" ResourceEntry 
+SimpleResourceFactory  ..|>  ResourceFactory
+CachedResourceFactory  --|>  SimpleResourceFactory
+CachedResourceFactory "1" *--> "storage *" ResourceEntry
 ```
 
 其中 `ResourceFactory` 为工厂接口，`SimpleResourceFactory` 是最简单的工厂实现。
@@ -322,15 +322,43 @@ CachedResourceFactory "1" *--> "storage *" ResourceEntry
 
 > 判断 out of date 的逻辑详见代码
 
-#### Put them together
+#### Putting them together
 
-TODO：
+在万事俱备后，我们就开始着手重构 `ClassificationResources`.
+
+最终采用 Reflection 来从工厂获取并赋值所有资源变量，核心代码如下：
+
+```java
+/* 用反射加载所有资源 */
+Class<? extends ClassificationResources> me = this.getClass();
+try {
+  for (Field field : me.getFields()) {
+    Class<?> clazz = field.getType();
+    Object val = field.get(this);
+    // 只对未初始化的 WordList 子类 fields 赋值
+    if (Objects.isNull(val) && Resource.class.isAssignableFrom(clazz)) {
+      Class<? extends Resource> clazz1 = (Class<? extends Resource>) clazz;
+      String name = field.getName();
+      // 对应文件为 xxxFile
+      String filename = (String) me.getField(name + "File").get(this);
+      String path = Path.of(sgSentiStrengthFolder, filename).toString();
+      // 调用工厂创建实例
+      Resource instance = resourceFactory.buildResource(clazz1, path, options, iExtraLinesToReserve);
+      field.set(this, instance);
+    }
+  }
+
+} catch (NoSuchFieldException | IllegalAccessException | IllegalArgumentException e) {
+  log.fatal(e.getLocalizedMessage());
+  return false;
+}
+```
 
 ### 效果
 
-采用 `CachedResourceFactory` 后同资源多次创建的性能平均提升约 80%，而单次创建的性能与原来持平。
+采用 `CachedResourceFactory` 后同资源多次创建的性能平均提升约 6 倍，而单次创建的性能与原来持平。
 
-测试统计数据（在测试 `uk.ac.wlv.sentistrength.factory.CachedFactoryTest#perfTest` 中）: 
+测试统计数据（在测试 `uk.ac.wlv.sentistrength.factory.CachedFactoryTest#perfTest` 中）:
 
 ```java
 == Scene 1: Processing 32 requests concurrently
@@ -343,3 +371,76 @@ TODO：
 > Cached: 111 ms
 > Cached / Simple = 0.99
 ```
+
+### 改进方向
+
+目前的缓存工程类只缓存最近一个资源实例，这种实现对目前的使用场景而言是戳戳有余的。
+
+然而如果未来使用场景变更为“可能频繁更换资源来源”，如允许用户自行上传资源，则可能需要增加缓存资源的数量，并将数量编写在配置文件中。
+
+此外，当前重构并未修改 `ClassificationResources` 中的大量 public 但基本不会变更的硬编码文件名，这点在后续开发中要继续考量是否应该重构、如何重构等问题。
+
+## SentiStrengthFactory
+
+### 问题
+
+为了将原有的 SentiStrength 程序扩展成后端应用，我们需要编写代码将请求参数转换为对应的 SentiStrength 对象并执行，而为了构建方式的潜在变化，我们需要隔离构建部分的代码。
+
+### 重构方案
+
+我们选用了工厂模式来解决这一点，组成如下：
+
+```mermaid
+classDiagram
+direction BT
+class CachedSentiStrengthFactory {
+  + build(AnalysisModeEnum, Boolean, AnalysisOptionsVO) SentiStrength
+}
+class SentiKey {
+  + equals(Object) boolean
+  + hashCode() int
+  + args() String[]
+}
+class SentiStrengthFactory {
+<<Interface>>
+  + build() SentiStrength
+  + build(AnalysisModeEnum, Boolean, AnalysisOptionsVO) SentiStrength
+}
+class SimpleSentiStrengthFactory {
+  + build(AnalysisModeEnum, Boolean, AnalysisOptionsVO) SentiStrength
+  + build() SentiStrength
+  # build(String[]) SentiStrength
+  # getArgs(AnalysisModeEnum, Boolean, AnalysisOptionsVO) String[]
+}
+
+CachedSentiStrengthFactory  --|>  SimpleSentiStrengthFactory 
+CachedSentiStrengthFactory  -->  SentiKey 
+SimpleSentiStrengthFactory  ..|>  SentiStrengthFactory 
+```
+
+`SentiStrengthFactory` 是工厂接口类，定义了读入请求参数、返回 SentiStrength 实例的构建接口。 
+
+直接实现其的 `SimpleSentiStrengthFactory` 是最简单实现，其中编写了将请求参数转换为实例的具体逻辑。
+
+而考虑到在实际场景中我们可能会用相同的参数、不同的语句多次请求，每次都创建新的实例其实是相当浪费的，所以我们又设计了 `CachedSentiStrengthFactory`，以封装过的参数 String array 作为索引，采用 LRU 算法来缓存已经创建过的实例。在缓存实现上，为了避免重复造轮子，我们选用了 Google Guava 库中的 `Cache` 类。
+
+### 效果
+
+经测试，采用缓存工厂类后性能提升显著：在不开启资源缓存下提升约 7 倍；开启资源缓存下提升约 18 倍。
+
+测试统计数据如下
+
+```java
+==== Without resource cache ====
+> Simple: 382 ms
+> Cached: 48 ms
+Cached / Simple = 0.13
+==== With resource cache ====
+> Simple: 19 ms
+> Cached: 1 ms
+Cached / Simple = 0.05
+```
+
+### 改进方向
+
+有些不同的 SentiStrength 实例之间其实就差一两个变量，所以可以通过 Prototype Pattern 直接复制并修改。
