--- a/迭代二/项目文档/项目重构设计文档.md
+++ b/迭代二/项目文档/项目重构设计文档.md
@@ -376,6 +376,26 @@ try {
 
 此外，当前重构并未修改 `ClassificationResources` 中的大量 public 但基本不会变更的硬编码文件名，这点在后续开发中要继续考量是否应该重构、如何重构等问题。
 
+## SentiProperties
+
+### 问题
+
+在刚才的 `ResourceFactory` 设计中，虽然在多次并发请求的情况下 `CachedResourceFactory` 提升显著，但对于单次运行（非后端模式运行）而言，初始化和调用 `CachedResourceFactory` 需要创建和使用 `ConcurrentHashMap`，是 100% 的资源浪费。
+
+> 虽然在性能测试中，单词调用的情况下两种工厂速度基本一致，但 ConcurrentHashMap 会占用更多的内存空间，这也是没必要的。
+
+再进一步挖掘这个问题，我们要解决的主要是：“如何让 SentiStrength 实例区分现在是什么模式”。
+
+### 重构方案
+
+Spring Framework 中使用了 Java 原生的 `java.util.Properties` 及一系列 `java.lang.System` 下的方法来设置和读取运行参数，所以我们也仿照设计了 `SentiProperties` 类。
+
+`SentiProperties` 其实就是 `System.getProperty`、`System.setProperty` 等一系列方法的封装，但我们根据使用需要添加了可设置/取回 bool 类型属性值的方法，同时将属性键作为常量存储在该类中。
+
+### 效果
+
+现在我们通过 `SentiProperties.SERVER_MODE` 属性存储是否为后端模式，只有在开启后端模式时才使用 `CachedResourceFactory`，否则使用 `SimpleResourceFactory`.
+
 ## SentiStrengthFactory
 
 ### 问题
@@ -409,12 +429,12 @@ class SimpleSentiStrengthFactory {
   # getArgs(AnalysisModeEnum, Boolean, AnalysisOptionsVO) String[]
 }
 
-CachedSentiStrengthFactory  --|>  SimpleSentiStrengthFactory 
-CachedSentiStrengthFactory  -->  SentiKey 
-SimpleSentiStrengthFactory  ..|>  SentiStrengthFactory 
+CachedSentiStrengthFactory  --|>  SimpleSentiStrengthFactory
+CachedSentiStrengthFactory  -->  SentiKey
+SimpleSentiStrengthFactory  ..|>  SentiStrengthFactory
 ```
 
-`SentiStrengthFactory` 是工厂接口类，定义了读入请求参数、返回 SentiStrength 实例的构建接口。 
+`SentiStrengthFactory` 是工厂接口类，定义了读入请求参数、返回 SentiStrength 实例的构建接口。
 
 直接实现其的 `SimpleSentiStrengthFactory` 是最简单实现，其中编写了将请求参数转换为实例的具体逻辑。
 
