--- a/迭代二/迭代二任务安排.md
+++ b/迭代二/迭代二任务安排.md
@@ -30,7 +30,7 @@ date updated: 2023-04-16 11:14
 > Note: 迭代二中的所有代码变更不应影响 SentiStrength 的分析结果！
 
 - [x] `C21 - <必须>` 使⽤ SentiStrength，分析助教提供的的软⼯⽂本和社交⽂本的情绪，并对⽐⼆者在情绪表达上的不同
-- [ ] `O21 - [可选]` ⾃⾏提供更多的软⼯⽂本和社交⽂本，并尝试对其分析，观察能否有更多发现。（核⼼不是新数据集的数量，⽽是分析结果的差异）
+- [x] `O21 - [可选]` ⾃⾏提供更多的软⼯⽂本和社交⽂本，并尝试对其分析，观察能否有更多发现。（核⼼不是新数据集的数量，⽽是分析结果的差异）
 
 #### 2.2 要求
 
@@ -88,19 +88,19 @@ date updated: 2023-04-16 11:14
 
 ### 1. 人员安排
 
-| 任务    | 负责人       | 完成情况 | 备注               |
-| ----- | --------- | ---- | ---------------- |
-| `C11` | 谭子悦       | X    |                  |
-| `C12` | 谭子悦       | X    | TODO: 文档还需要补充    |
-| `C21` | 华广松       | X    |                  |
-| `C31` | 杜威 徐浩钦 陈骏 | X    | 根据最新作业要求，略过此部分任务 |
-| `C32` | 杜威 徐浩钦 陈骏 | X    |                  |
-| `C33` | 杜威 徐浩钦 陈骏 | X    |                  |
-| `C41` | 谭子悦       | X    |                  |
-| `C42` | 邓尤亮       | X    |                  |
-| `C51` | 见下述分工     |      |                  |
-| `O21` | 华广松       |      |                  |
-| `O31` | 杜威 徐浩钦 陈骏 |      |                  |
+| 任务  | 负责人           | 完成情况 | 备注                             |
+| ----- | ---------------- | -------- | -------------------------------- |
+| `C11` | 谭子悦           | X        |                                  |
+| `C12` | 谭子悦           | X        | TODO: 文档还需要补充             |
+| `C21` | 华广松           | X        |                                  |
+| `C31` | 杜威 徐浩钦 陈骏 | X        | 根据最新作业要求，略过此部分任务 |
+| `C32` | 杜威 徐浩钦 陈骏 | X        |                                  |
+| `C33` | 杜威 徐浩钦 陈骏 | X        |                                  |
+| `C41` | 谭子悦           | X        |                                  |
+| `C42` | 邓尤亮           | X        |                                  |
+| `C51` | 见下述分工       |          |                                  |
+| `O21` | 华广松           | X        |                                  |
+| `O31` | 杜威 徐浩钦 陈骏 |          |                                  |
 
 #### 功能展示
 
