--- a/迭代二/迭代二任务安排.md
+++ b/迭代二/迭代二任务安排.md
@@ -5,9 +5,9 @@ date updated: 2023-04-16 11:14
 
 # 迭代二任务安排
 
-| 变更人 | 变更日期       | 变更内容     |
-| --- | ---------- | -------- |
-| 谭子悦 | 2023/03/21 | 文档初始化    |
+| 变更人 | 变更日期   | 变更内容         |
+| ------ | ---------- | ---------------- |
+| 谭子悦 | 2023/03/21 | 文档初始化       |
 | 谭子悦 | 2023/03/28 | 第二次会议后更新 |
 | 谭子悦 | 2023/04/04 | 第三次会议后更新 |
 | 谭子悦 | 2023/04/08 | 第四次会议后更新 |
@@ -47,7 +47,7 @@ date updated: 2023-04-16 11:14
 - [x] `C31 - <必须>` 尝试找出系统功能 bug 并修复；
 - [x] `C32 - <必须>` 使⽤ CheckStyle 检查 SentiStrength 源代码，根据检查结果，优化源代码；
 - [x] `C33 - <必须>` 对⽐ CheckStyle 的检查和⼈⼯ debug 的结果，即哪些问题是⼩组成员认为存在的，但 CheckStyle 未检查出来，以及反之；
-- [ ] `O31 - [可选]` 可同时使⽤其他代码检查⼯具检查 SentiStrength 源代码。若使⽤其他⼯具检查，需对⽐使⽤⼯具产出结果和 CheckStyle 产出结果的不同；
+- [x] `O31 - [可选]` 可同时使⽤其他代码检查⼯具检查 SentiStrength 源代码。若使⽤其他⼯具检查，需对⽐使⽤⼯具产出结果和 CheckStyle 产出结果的不同；
 
 #### 3.2 要求
 
@@ -76,7 +76,7 @@ date updated: 2023-04-16 11:14
 
 #### 5.1 任务
 
-- [ ] `C51 - <必须>` 视频
+- [x] `C51 - <必须>` 视频
 
 #### 5.2 要求
 
@@ -98,13 +98,13 @@ date updated: 2023-04-16 11:14
 | `C33` | 杜威 徐浩钦 陈骏 | X        |                                  |
 | `C41` | 谭子悦           | X        |                                  |
 | `C42` | 邓尤亮           | X        |                                  |
-| `C51` | 见下述分工       |          |                                  |
+| `C51` | 见下述分工       | X        |                                  |
 | `O21` | 华广松           | X        |                                  |
-| `O31` | 杜威 徐浩钦 陈骏 |          |                                  |
+| `O31` | 杜威 徐浩钦 陈骏 | X        |                                  |
 
 #### 功能展示
 
-总时长 5 分钟内，分为四个部分，各部分控制在 1～2 分钟内。
+总时长 5 分钟内，分为四个部分，各部分控制在 1 ～ 2 分钟内。
 
 在 4 月 16 日前，完成各自部分的录制，最后汇总提交。
 
