--- a/迭代二/项目文档/接口文档/接口文档.md
+++ b/迭代二/项目文档/接口文档/接口文档.md
@@ -1,5 +1,9 @@
 # 接口文档
 
+| 变更人 | 变更日期   | 变更内容 |
+| ------ | ---------- | -------- |
+| 邓尤亮 | 2023/04/03 | 文档完成 |
+
 ## 1. POST 对文本运行一次情感分析
 
 ### 1.1 接口解释
@@ -45,71 +49,67 @@ body 类型: `application/json`
 | illegalDoubleLettersAtWordEnd        | body.options | String  | 是       | 单词末尾的非法重复字母       | 默认 achijkmnpqruvwxyz |
 | noMultipleLetters                    | body.options | Boolean | 是       | 不允许重复单词               |                        |
 
-示例1：
+示例 1：
 
 ```json
 {
-    "text": "I don't hate you.",
-	"mode": "default",
-	"explain": true,
-	"options": {
-		"alwaysSplitWordsAtApostrophes": true,
-		"noBoosters": true,
-		"noNegatingPositiveFlipsEmotion": true,
-		"noNegatingNegativeNeutralisesEmotion": true,
-		"negatedWordStrengthMultiplier": 0.6,
-		"maxWordsBeforeSentimentToNegate": 3,
-		"noIdioms": true,
-		"questionsReduceNeg": true,
-		"noEmoticons": true,
-		"exclamations2": true,
-		"mood": -1,
-		"noMultiplePosWords": true,
-		"noMultipleNegWords": true,
-		"noIgnoreBoosterWordsAfterNegatives": true,
-		"noDictionary": true,
-		"noDeleteExtraDuplicateLetters": true,
-		"illegalDoubleLettersInWordMiddle": "ahijkquvxyz",
-		"illegalDoubleLettersAtWordEnd": "achijkmnpqruvwxyz",
-		"noMultipleLetters": true
-	}
+  "text": "I don't hate you.",
+  "mode": "default",
+  "explain": true,
+  "options": {
+    "alwaysSplitWordsAtApostrophes": true,
+    "noBoosters": true,
+    "noNegatingPositiveFlipsEmotion": true,
+    "noNegatingNegativeNeutralisesEmotion": true,
+    "negatedWordStrengthMultiplier": 0.6,
+    "maxWordsBeforeSentimentToNegate": 3,
+    "noIdioms": true,
+    "questionsReduceNeg": true,
+    "noEmoticons": true,
+    "exclamations2": true,
+    "mood": -1,
+    "noMultiplePosWords": true,
+    "noMultipleNegWords": true,
+    "noIgnoreBoosterWordsAfterNegatives": true,
+    "noDictionary": true,
+    "noDeleteExtraDuplicateLetters": true,
+    "illegalDoubleLettersInWordMiddle": "ahijkquvxyz",
+    "illegalDoubleLettersAtWordEnd": "achijkmnpqruvwxyz",
+    "noMultipleLetters": true
+  }
 }
 ```
 
-
-
-示例2：text 包含换行符
+示例 2：text 包含换行符
 
 ```json
 {
-    "text": "I don't hate you.\ndoesn't work. how do I do this?\nExcellent! Just what i needed!",
-	"mode": "trinary",
-	"explain": false,
-    "options": {
-		"alwaysSplitWordsAtApostrophes": false,
-		"noBoosters": false,
-		"noNegatingPositiveFlipsEmotion": false,
-		"noNegatingNegativeNeutralisesEmotion": false,
-		"negatedWordStrengthMultiplier": 0.5,
-		"maxWordsBeforeSentimentToNegate": 0,
-		"noIdioms": false,
-		"questionsReduceNeg": false,
-		"noEmoticons": false,
-		"exclamations2": false,
-		"mood": -1,
-		"noMultiplePosWords": false,
-		"noMultipleNegWords": false,
-		"noIgnoreBoosterWordsAfterNegatives": false,
-		"noDictionary": false,
-		"noDeleteExtraDuplicateLetters": false,
-		"illegalDoubleLettersInWordMiddle": "ahijkquvxyz",
-		"illegalDoubleLettersAtWordEnd": "achijkmnpqruvwxyz",
-		"noMultipleLetters": false
-	}
+  "text": "I don't hate you.\ndoesn't work. how do I do this?\nExcellent! Just what i needed!",
+  "mode": "trinary",
+  "explain": false,
+  "options": {
+    "alwaysSplitWordsAtApostrophes": false,
+    "noBoosters": false,
+    "noNegatingPositiveFlipsEmotion": false,
+    "noNegatingNegativeNeutralisesEmotion": false,
+    "negatedWordStrengthMultiplier": 0.5,
+    "maxWordsBeforeSentimentToNegate": 0,
+    "noIdioms": false,
+    "questionsReduceNeg": false,
+    "noEmoticons": false,
+    "exclamations2": false,
+    "mood": -1,
+    "noMultiplePosWords": false,
+    "noMultipleNegWords": false,
+    "noIgnoreBoosterWordsAfterNegatives": false,
+    "noDictionary": false,
+    "noDeleteExtraDuplicateLetters": false,
+    "illegalDoubleLettersInWordMiddle": "ahijkquvxyz",
+    "illegalDoubleLettersAtWordEnd": "achijkmnpqruvwxyz",
+    "noMultipleLetters": false
+  }
 }
 ```
-
-
 
 ### 1.4 响应
 
@@ -120,7 +120,7 @@ class TextAnalysisVO {
     int val1;
     int val2;
     int val3; // default 模式为 0
-    String explain;   
+    String explain;
 }
 ```
 
@@ -131,28 +131,26 @@ class TextAnalysisVO {
   "code": 0,
   "msg": "success",
   "data": [
-        {
-            "val1": 1,
-            "val2": -4,
-            "val3": -1,
-            "explain": "I don t hate[-4] you .[sentence: 1,-4] [result: max + and - of any sentence][overall result = -1 as pos<-neg]"
-        },
-        {
-            "val1": 1,
-            "val2": -1,
-            "val3": 0,
-            "explain": "doesn t work .[sentence: 1,-1] how do I do this ?[sentence: 1,-1] [result: max + and - of any sentence][trinary result = 0 as pos=1 neg=-1]"
-        },
-        {
-            "val1": 5,
-            "val2": -2,
-            "val3": 1,
-            "explain": "Excellent[4] ![+1 punctuation emphasis] [sentence: 5,-1] Just what i needed ![-1 punctuation mood emphasis] [sentence: 1,-2] [result: max + and - of any sentence][overall result = 1 as pos>-neg]"
-        }
-    ]
+    {
+      "val1": 1,
+      "val2": -4,
+      "val3": -1,
+      "explain": "I don t hate[-4] you .[sentence: 1,-4] [result: max + and - of any sentence][overall result = -1 as pos<-neg]"
+    },
+    {
+      "val1": 1,
+      "val2": -1,
+      "val3": 0,
+      "explain": "doesn t work .[sentence: 1,-1] how do I do this ?[sentence: 1,-1] [result: max + and - of any sentence][trinary result = 0 as pos=1 neg=-1]"
+    },
+    {
+      "val1": 5,
+      "val2": -2,
+      "val3": 1,
+      "explain": "Excellent[4] ![+1 punctuation emphasis] [sentence: 5,-1] Just what i needed ![-1 punctuation mood emphasis] [sentence: 1,-2] [result: max + and - of any sentence][overall result = 1 as pos>-neg]"
+    }
+  ]
 }
 ```
 
 ### 1.5 错误情况
-
-
