--- a/开发规范.md
+++ b/开发规范.md
@@ -5,6 +5,7 @@
 | 谭子悦 | 2023/02/28 | 文档初始化                   |
 | 谭子悦 | 2023/03/21 | 更新：文档规范               |
 | 谭子悦 | 2023/03/28 | 更新：新增类规范、项目结构等 |
+| 谭子悦 | 2023/04/19 | 更新：更新项目结构           |
 
 [TOC]
 
@@ -26,29 +27,54 @@ IDEA 打开后需要先添加为 gradle project.
 
 ## 项目结构
 
-> 更新于 2023 年 3 月 28 日
+> 更新于 2023 年 4 月 19 日
 
 ```c
-./src
-├── SentStrength_Data	// SentiStrength 配置文件
+src
+├── SentiStrength_Data  // 资源文件
 ├── main
 │   ├── java
+│   │   ├── common  // 公共常量 / 配置
 │   │   ├── uk
 │   │   │   └── ac
 │   │   │       └── wlv
-│   │   │           ├── sentistrength	// SentiStrength 核心包
-│   │   │           ├── utilities			// 工具包
-│   │   │           └── wkaclass			// 机器学习相关包
-│   │   └── web	  // Web 后端相关包
-│   └── resources // 存放 Spring 相关配置
-└── test
+│   │   │           ├── sentistrength // SentiStrength 核心
+│   │   │           │   ├── classification  // 分类相关
+│   │   │           │   │   └── resource      // 分类资源
+│   │   │           │   │       ├── concrete    // 具体资源类
+│   │   │           │   │       └── factory     // 资源工厂类
+│   │   │           │   ├── core            // 核心功能类
+│   │   │           │   │   └── component     // 语句组成部分
+│   │   │           │   └── option          // 选项类
+│   │   │           ├── util          // 新增工具类
+│   │   │           ├── utilities     // 原工具类
+│   │   │           └── wkaclass      // 机器学习相关类
+│   │   └── web             // 后端框架代码
+│   │       ├── config        // Spring 配置
+│   │       ├── controller    // Controller 层
+│   │       ├── data          // 数据层
+│   │       │   └── vo          // Value Objects
+│   │       ├── enums         // 枚举类
+│   │       ├── factory       // 工厂类
+│   │       │   └── impl        // 工厂实现
+│   │       ├── service       // 业务逻辑层
+│   │       │   └── impl        // 业务逻辑实现
+│   │       └── util          // 工具类
+│   └── resources
+└── test      // 测试
     └── java
-        ├── sample // 测试样本，后续测试不应编写于此
+        ├── sample
         ├── uk
         │   └── ac
         │       └── wlv
-        │           └── sentistrength // 所有关于 SentiStrength 的核心测试都应编写于此
-        └── web // 所有关于后端 Web 的测试都应编写于此
+        │           └── sentistrength
+        │               └── factory
+        └── web
+            ├── controller
+            ├── factory
+            ├── mock
+            ├── service
+            └── util
 ```
 
 ## 开发
