会议记录更新

--- a/迭代三/迭代三任务安排.md
+++ b/迭代三/迭代三任务安排.md
@@ -20,9 +20,46 @@
 	- 汇聚标注结果，聚焦的分析版本问题；
 	- 可通过 [Gu ASE 2015] 了解什么是情绪的方面（aspect）
 
-## 日程表
-
-- 05.08：迭代二检查 & 迭代三第一次中期检查
-- 06.02：迭代三阶段提交
-
 ## 任务总览
+
+### 工作
+
+1. **前端**：@邓尤亮 
+
+2. **数据获取、后端**：@谭子悦 
+
+3. **PRD、细化**：@徐浩钦 @杜威 @华广松 @陈骏 
+
+  - **产出 PRD**
+
+      1. 找类似产品 / 工作。
+      2. 细化客户群体
+      3. 细化需求，做一个粗略的 PRD
+
+3. **细化**
+   	 1. 测试 SentiStrength 分析效果
+     2. 步骤三？
+
+### 日程安排
+
+迭代三截止日期：06.02
+
+以星期三为分界，三周时间：
+
+| 周数       | 数据获取 | PRD  | 后端                     | 前端     | 细化     |
+| ---------- | -------- | ---- | ------------------------ | -------- | -------- |
+| W1 - 05.17 | ✅        | ✅    | 数据库完成，其余初步搭建 | 初步搭建 |          |
+| W2 - 05.24 | ✅        | ✅    | ✅                        | ✅        | 开始着手 |
+| W3 - 05.31 | ✅        | ✅    | ✅                        | ✅        | ✅        |
+
+- **W1 - 05.17**
+  - **产出 PRD**
+    - 需求要确定、客户群体确定
+    - 要确定要展示的内容
+- **W2 - 05.24**
+  - 前端开发基本完成
+  - 后端开发基本完成
+  - 前后端联调测试
+- **W3 - 05.31**
+  - 产品正常运行
+  - 完善功能 & 考虑步骤3
