--- a/迭代三/迭代三任务安排.md
+++ b/迭代三/迭代三任务安排.md
@@ -1,8 +1,9 @@
 # 迭代三任务安排
 
-| 变更人 | 变更日期   | 变更内容         |
-| ------ | ---------- | ---------------- |
-| 谭子悦 | 2023/05/06 | 文档初始化       |
+| 变更人 | 变更日期   | 变更内容       |
+| ------ | ---------- | -------------- |
+| 谭子悦 | 2023/05/06 | 文档初始化     |
+| 谭子悦 | 2023/05/10 | 第二次会议更新 |
 
 [TOC]
 
@@ -11,34 +12,34 @@
 优化用户体验，形成成熟工具，试分析原生数据；
 
 - **Step-1**：获取数据
-	- 抓取GitHub上一个大型Apache项目的某一版本内的 issue + issue评论，及相关信息
-- **Step-2**：利用SentiStrength分析数据
-	- 可按照不同的维度分析数据：按项目分析、按人分析；
-	- 分析需合理，并用合适的图表/工具美观的展示。
+  - 抓取 GitHub 上一个大型 Apache 项目的某一版本内的 issue + issue 评论，及相关信息
+- **Step-2**：利用 SentiStrength 分析数据
+  - 可按照不同的维度分析数据：按项目分析、按人分析；
+  - 分析需合理，并用合适的图表/工具美观的展示。
 - **Step-3**：进一步分析情绪指向
-	- 标注情绪方面（200条+），如 "This may be a bug with the widget itself."
-	- 汇聚标注结果，聚焦的分析版本问题；
-	- 可通过 [Gu ASE 2015] 了解什么是情绪的方面（aspect）
+  - 标注情绪方面（200 条+），如 "This may be a bug with the widget itself."
+  - 汇聚标注结果，聚焦的分析版本问题；
+  - 可通过 [Gu ASE 2015] 了解什么是情绪的方面（aspect）
 
 ## 任务总览
 
 ### 工作
 
-1. **前端**：@邓尤亮 
+1. **前端**：@邓尤亮
 
-2. **数据获取、后端**：@谭子悦 
+2. **数据获取、后端**：@谭子悦
 
-3. **PRD、细化**：@徐浩钦 @杜威 @华广松 @陈骏 
+3. **PRD、细化**：@徐浩钦 @杜威 @华广松 @陈骏
 
-  - **产出 PRD**
+- **产出 PRD**
 
-      1. 找类似产品 / 工作。
-      2. 细化客户群体
-      3. 细化需求，做一个粗略的 PRD
+  1. 找类似产品 / 工作。
+  2. 细化客户群体
+  3. 细化需求，做一个粗略的 PRD
 
 3. **细化**
-   	 1. 测试 SentiStrength 分析效果
-     2. 步骤三？
+   1. 测试 SentiStrength 分析效果
+   2. 步骤三？
 
 ### 日程安排
 
@@ -46,11 +47,11 @@
 
 以星期三为分界，三周时间：
 
-| 周数       | 数据获取 | PRD  | 后端                     | 前端     | 细化     |
-| ---------- | -------- | ---- | ------------------------ | -------- | -------- |
-| W1 - 05.17 | ✅        | ✅    | 数据库完成，其余初步搭建 | 初步搭建 |          |
-| W2 - 05.24 | ✅        | ✅    | ✅                        | ✅        | 开始着手 |
-| W3 - 05.31 | ✅        | ✅    | ✅                        | ✅        | ✅        |
+| 周数       | 数据获取 | PRD | 后端                     | 前端     | 细化     |
+| ---------- | -------- | --- | ------------------------ | -------- | -------- |
+| W1 - 05.17 | ✅       | ✅  | 数据库完成，其余初步搭建 | 初步搭建 |          |
+| W2 - 05.24 | ✅       | ✅  | ✅                       | ✅       | 开始着手 |
+| W3 - 05.31 | ✅       | ✅  | ✅                       | ✅       | ✅       |
 
 - **W1 - 05.17**
   - **产出 PRD**
@@ -62,4 +63,4 @@
   - 前后端联调测试
 - **W3 - 05.31**
   - 产品正常运行
-  - 完善功能 & 考虑步骤3
+  - 完善功能 & 考虑步骤 3
