更新第三次会议内容

--- a/迭代三/迭代三任务安排.md
+++ b/迭代三/迭代三任务安排.md
@@ -4,6 +4,7 @@
 | ------ | ---------- | -------------- |
 | 谭子悦 | 2023/05/06 | 文档初始化     |
 | 谭子悦 | 2023/05/10 | 第二次会议更新 |
+| 谭子悦 | 2023/05/18 | 第三次会议更新 |
 
 [TOC]
 
@@ -21,6 +22,20 @@
   - 汇聚标注结果，聚焦的分析版本问题；
   - 可通过 [Gu ASE 2015] 了解什么是情绪的方面（aspect）
 
+### 谜语人追加信息
+
+> 可以通过版本日期来确认 issue 所属的版本：查看两个大版本的日期，在这个日期内的都视为“该版本内的 issue"。
+>
+> 如果一个版本的 issue 数量难以支撑起分析，可分析多个版本中的 issue；若引入版本的更替的话，最好能够分析不同版本中 issue 文本的情绪是否有变化。
+
+> 如果认为"title""body""评论"中的文本是有区分意义的，推荐分开进行分析。
+
+> 步骤三具体要求为：
+>
+> 1. 人工标注 200 条以上爬取数据的情绪方面。（将标注后的数据提交到 gitlab 服务器上）
+> 2. 对标注的 aspect 进行分析。
+> 3. 在工具中提供一个页面展示小组对这些数据的分析结果。可以是程序自动分析并生成报告，也可以是小组手动分析结果并编写报告。
+
 ## 任务总览
 
 ### 工作
@@ -37,9 +52,11 @@
   2. 细化客户群体
   3. 细化需求，做一个粗略的 PRD
 
-3. **细化**
-   1. 测试 SentiStrength 分析效果
-   2. 步骤三？
+- **细化**
+
+  1. 测试 SentiStrength 分析效果
+
+4. **Step 3**: @徐浩钦 @杜威 @华广松 @陈骏
 
 ### 日程安排
 
@@ -47,7 +64,7 @@
 
 以星期三为分界，三周时间：
 
-| 周数       | 数据获取 | PRD | 后端                     | 前端     | 细化     |
+| 周数       | 数据获取 | PRD | 后端                     | 前端     | Step 3   |
 | ---------- | -------- | --- | ------------------------ | -------- | -------- |
 | W1 - 05.17 | ✅       | ✅  | 数据库完成，其余初步搭建 | 初步搭建 |          |
 | W2 - 05.24 | ✅       | ✅  | ✅                       | ✅       | 开始着手 |
