完成需求规格文档

--- a/迭代三/需求规格说明文档.md
+++ b/迭代三/需求规格说明文档.md
@@ -3,41 +3,140 @@
 | 变更人 | 变更日期   | 变更内容   |
 | ------ | ---------- | ---------- |
 | 谭子悦 | 2023/05/10 | 文档初始化 |
+| 华广松 | 2023/05/18 | 撰写文档   |
 
 ## 一、需求背景
 
-<!--
-// TODO：简述s
--->
+本文档旨在详细描述GitHub项目的情感分析系统的需求规格。本系统将针对某一版本的Apache项目中的问题和问题评论进行情感分析，并提供多维度的数据分析和可视化展示，本文档包括功能需求、用户界面设计等。
 
 ### 1. 同类产品调研
 
-<!--
-// TODO：肯德基疯狂星期四，谁请我吃
--->
+- [情感分析技术在美团的应用](https://tech.meituan.com/2021/10/20/the-applications-of-sentiment-analysis-meituan.html)
+
+- [阿里智能商品评价](https://ai.aliyun.com/nlp/ra?spm=5176.12095367.J_1232829.3.3cada5c60N8IJe)
+  - 阿里NLP自学习平台下基于电商行业的大量语料研发，对消费者历史评价和新增评价的商品维度属性自动解析，高效甄别正负面评价，应用于商品口碑分析，问题追踪，属性分类。价格为1912.50元/年。
 
 ### 2. 用户画像
 
-<!--
-// TODO：Can Can Need
--->
+- 项目开发者
+  - issue 紧急性，最低得分的话题优先级越高（未解决+情绪得分低+涉及话题热度高）
+  - 负面 issue 相关主题，是否有过类似问题，将某个长时间存在的问题聚焦于某个模块
+  - 正面 issue 为开发者产生激励作用
+- 用户/投资者
+  - Issue 情绪走向帮助用户选择开源项目
+  - 提供相似项目情绪得分对比功能
+  - 为其提供同一项目不同版本的情绪得分，辅助其选择合适版本
+  - 关键词标签辅助其了解与选择开源项目
+- 项目管理者
+  - 追踪项目反馈，了解项目整体情绪走向
+  - 评估开发者状态（开发者个人情绪趋势）
+  - 了解issue中的热点问题
 
 ## 二、需求说明
 
 ### 1. 需求目标
 
-<!---
-TODO：通过这一系列的需求，我们想实现哪些事情？列一个表
--->
+> 优先级递减
+
+1. 项目维度
+   1. 自由添加、追踪项目
+   2. 项目情感趋势分析
+   3. 版本推荐
+2. 开发者维度
+   1. 识别未解决+情绪得分较低的issue,提供给开发者
+
+3. 关键词标签
+   1. 识别热点主题
+   2. 项目导入时推荐
+
+4. 个人维度
+   1. 用户情感得分计算
+   2. 绘制趋势图
+   3. 基于用户权重的推荐列表
+
+5. 话题维度
+   1. 聚类
+   2. 创建热图
+
 
 ### 2. 需求描述
 
-<!---
-TODO: 描述需求内容，不必拘泥于形式，重点在于让前后端开发人员看得懂
--->
+#### 前置需求
 
-#### 一键三连
+##### 数据获取
 
-用户点击黄色按钮后会自动对 @绿导师原谅你了 的最新视频一键三连。
+1. 通过GitHub API获取指定版本的问题和问题评论数据。（爬虫）
+2. 针对每个issue，获取相关信息（例如标题、创建日期、状态等）以及与之关联的评论。
 
-更多描述……
+##### 情感分析
+
+使用SentiStrength工具对每个issue和评论进行情感分析，获得其正面和负面情感的强度得分
+
+#### 功能需求
+
+###### 项目功能
+
+1. 自由添加、追踪项目
+   1. 用户输入框输入项目github地址，自动切换项目
+   2. 特定项目提供版本选择，并根据情绪平均得分为用户推荐最佳版本
+2. 对比相似项目
+   1. 用户点击加入项目篮按钮可将该项目存入，可在项目列表中对比不同项目的总得分
+3. 追踪历史情感态度
+   1. 追踪项目整体历史情感
+   2. 分析开发人员状态走向
+   3. 分析某问题相关走向
+   4. 项目与其他组件关系
+
+###### 关键词标签
+
+1. 根据情感得分和关键词频率，识别导致负面情感的关键问题
+2. 分析正面情感较高的问题，了解其成功因素和令人满意的特点
+3. 根据与其他组件相关的整体情感趋势，分析该项目与其他组件的兼容性
+4. 在用户选择项目时作为推荐/不推荐的关键词
+
+###### 项目维度需求
+
+1. 情感趋势分析
+   1. 将数据按时间分组（月、季度、年等），计算每个时间段内的平均情感得分以及issue数目。
+   2. 绘制趋势图，展示情感在项目发展过程中的变化。
+   3. 将情感得分与项目事件（如发布新版本、重大变更）对齐，探索事件对情感的影响。
+
+###### 个人维度需求
+
+1. 用户情感得分计算
+   1. 根据参与者的问题和评论计算其平均情感得分。
+   2. 对参与者的情感得分按时间计算每个时间段内的情感得分。
+   3. 绘制折线图，展示参与者情感随时间的变化。
+   4. 推荐列表按用户权重排序（权重影响因素：正面/负面情绪得分高低、粉丝数、issue频率、issue评论数量等）
+   5. 对比参与者在不同项目中的情感得分差异
+
+###### 话题维度需求
+
+1. 使用聚类算法（如K-means、层次聚类）对issue和评论进行聚类，发现相似的问题或讨论主题。
+2. 识别热点事件
+   1. 应用主题建模方法（如Latent Dirichlet Allocation）来提取潜在的主题或话题，并识别在项目中受关注或讨论较多的主题。
+   2. 创建热图或热力图来可视化情感得分在不同时间段和特定问题上的变化，以便观察项目中的情感热点或关键事件（横坐标为时间，纵坐标为主题（方面），用颜色深浅表示情绪的强度）
+3. 识别具体组件 Component/s
+
+###### 情感与问题状态
+
+1. 分析不同问题状态（如已解决、未解决、关闭等）的得分
+2. 挑出情感得分较低的未解决问题，以了解用户需求或开发团队的挑战。
+
+#### 用户界面设计
+
+##### 仪表板界面
+
+1. 提供一个直观易用的仪表板界面，展示项目级别和个人级别的情感分析结果。
+2. 显示情感分布图表、情感趋势图表以及参与者情感得分的可视化展示。
+
+#####  交互功能
+
+1. 支持用户选择特定时间段和版本进行情感分析。
+2. 允许用户通过点击图表或选择参与者来获取更详细的个人级别情感分析信息。
+3. 支持用户选定特定主题进行情感分析。
+4. 支持用户下载情感分析结果。
+
+##### 响应式设计
+
+界面能够在不同设备和屏幕尺寸上进行适应，并保持良好的用户体验。
