修改迭代三论文笔记图片路径

--- a/迭代三/论文笔记/论文笔记.md
+++ b/迭代三/论文笔记/论文笔记.md
@@ -68,7 +68,7 @@ six steps:
 
 - 实现评论的自动分类，选择包含方面的句子
 
-![image-20230523123846645](.\images\image-20230523123846645.png)
+![image-20230523123846645](./images/image-20230523123846645.png)
 
 ###  Step 3 - Aspect-Opinion Extraction
 
@@ -92,7 +92,7 @@ We group aspect-opinion pairs with the same aspects and summarize sentiments and
 
 - The **Aspect Heat Map** demonstrates popular aspects that users are concerned with.
 
-  ![image-20230523150359222](.\images\image-20230523150359222.png)
+  ![image-20230523150359222](./images/image-20230523150359222.png)
 
 - The **Aspect Trend Map** demonstrates the sentiment trends over time.
 
