修改迭代一论文笔记图片路径

--- a/迭代一/论文笔记/论文笔记.md
+++ b/迭代一/论文笔记/论文笔记.md
@@ -127,13 +127,13 @@ e.g.:
 
 本文P166
 
-![image-20230303105517868](C:\NJU_SE_NOTES\2023-软件工程与计算III\lab\lab1\ProcessDocumentation\迭代一\论文笔记\images\image-20230303105517868.png)
+![image-20230303105517868](./images/image-20230303105517868.png)
 
 ### 1$\to$2
 
 **SentiStrength 2相对 1 扩展了什么？**
 
-![image-20230303110048794](C:\NJU_SE_NOTES\2023-软件工程与计算III\lab\lab1\ProcessDocumentation\迭代一\论文笔记\images\image-20230303110048794.png)
+![image-20230303110048794](./images/image-20230303110048794.png)
 
 ## **Research Questions**
 
@@ -146,7 +146,7 @@ e.g.:
 
 ### test data set 6+1
 
-![image-20230303141146739](C:\NJU_SE_NOTES\2023-软件工程与计算III\lab\lab1\ProcessDocumentation\迭代一\论文笔记\images\image-20230303141146739.png)
+![image-20230303141146739](./images/image-20230303141146739.png)
 
 - 证明测试数据有效
   - Krippendorff’s *α*
@@ -163,13 +163,13 @@ e.g.:
 
 数据集大小
 
-![image-20230303143132518](C:\NJU_SE_NOTES\2023-软件工程与计算III\lab\lab1\ProcessDocumentation\迭代一\论文笔记\images\image-20230303143132518.png)
+![image-20230303143132518](./images/image-20230303143132518.png)
 
 ### *Overall Sentiment Distribution*
 
 见Figures 1 and 2
 
-![image-20230303144131924](C:\NJU_SE_NOTES\2023-软件工程与计算III\lab\lab1\ProcessDocumentation\迭代一\论文笔记\images\image-20230303144131924.png)
+![image-20230303144131924](./images/image-20230303144131924.png)
 
 ## **Results**
 
@@ -179,7 +179,7 @@ e.g.:
 
 见 Table 2
 
-![image-20230303144421842](C:\NJU_SE_NOTES\2023-软件工程与计算III\lab\lab1\ProcessDocumentation\迭代一\论文笔记\images\image-20230303144421842.png)
+![image-20230303144421842](./images/image-20230303144421842.png)
 
 ## **Limitations and Discussion**
 
