--- a/迭代三/接口文档.md
+++ b/迭代三/接口文档.md
@@ -431,3 +431,122 @@ Example:
 ### 6.5 错误情况
 
 无
+
+## 7. POST 获取一个 Repo 的总体分值
+
+### 7.1 接口解释
+
+选择纳入计算的 release，获取一个仓库的总体分值
+
+### 7.2 请求路径
+
+`/repo/{owner}/{name}/total`
+
+### 7.3 请求参数
+
+| 名称          | 位置 | 类型   | 是否必须 | 中文名                      | 说明                                |
+| ------------- | ---- | ------ | -------- | --------------------------- | ----------------------------------- |
+| `owner`       | path | string | yes      |
+| `name`        | path | string | yes      |
+| `releaseTags` | body | list   | yes      | 需要纳入计算的 release 列表 | 填入 release tag，或者 `No release` |
+
+Request Body 示例：
+
+```json
+{
+  "releaseTags": ["No release", "rocketmq-all-4.8.0"]
+}
+```
+
+### 7.4 响应
+
+```typescript
+interface Result {
+  code: number;
+  msg: string;
+  data: Array<{
+    sum: number; // Scale 分值总和
+    count: number; // 总条目数
+    avg: number; // 分值平均值
+
+    posCnt: number; // 正向分值总数
+    posRatio: number; // 正向分值占比
+
+    negCnt: number; // 负向分值总数
+    negRatio: number; // 负向分值占比
+  }>;
+}
+```
+
+```json
+{
+  "code": 0,
+  "msg": "Success",
+  "data": {
+    "sum": 23,
+    "count": 150,
+    "avg": 0.15333333333333332,
+    "posCnt": 53,
+    "posRatio": 0.35333333333333333,
+    "negCnt": 29,
+    "negRatio": 0.19333333333333333
+  }
+}
+```
+
+### 7.5 错误情况
+
+无
+
+## 8. GET 获取一个 Repo 的饼状图数据
+
+### 8.1 接口解释
+
+获取一个 Repo 的饼状图数据，为各分值在一定时间范围内的占比。
+
+### 8.2 请求路径
+
+`/repo/{owner}/{name}/pieChart`
+
+### 8.3 请求参数
+
+| 名称    | 位置  | 类型   | 是否必须 | 中文名     | 说明 |
+| ------- | ----- | ------ | -------- | ---------- | ---- |
+| `owner` | path  | string | yes      |
+| `name`  | path  | string | yes      |
+| `from`  | param | number | yes      | 开始时间戳 |
+| `to`    | param | number | yes      | 结束时间戳 |
+
+### 8.4 响应
+
+```typescript
+interface Result {
+  code: number;
+  msg: string;
+  data: Map<number, number>;
+}
+```
+
+```json
+{
+  "code": 0,
+  "msg": "Success",
+  "data": {
+    "-1": 436,
+    "0": 933,
+    "-2": 115,
+    "1": 173,
+    "-3": 9,
+    "2": 16,
+    "-4": 0,
+    "3": 3,
+    "-5": 0,
+    "4": 0,
+    "5": 0
+  }
+}
+```
+
+### 8.5 错误情况
+
+无
