--- a/迭代三/接口文档.md
+++ b/迭代三/接口文档.md
@@ -167,13 +167,20 @@ interface Result {
 
 ### 4.3 请求参数
 
-| 名称        | 位置  | 类型   | 是否必须 | 中文名   | 说明                                               |
-| ----------- | ----- | ------ | -------- | -------- | -------------------------------------------------- |
-| `owner`     | path  | string | yes      |
-| `name`      | path  | string | yes      |
-| `page`      | param | number | no       | 第几页   | 默认为 0                                           |
-| `direction` | param | string | no       | 排序方向 | `desc` 或 `asc`，默认为 `desc`                     |
-| `sortBy`    | param | string | no       | 排序依据 | `issueNumber` 或 `createdAt`，默认为 `issueNumber` |
+| 名称        | 位置  | 类型   | 是否必须 | 中文名     | 说明                                                          |
+| ----------- | ----- | ------ | -------- | ---------- | ------------------------------------------------------------- |
+| `owner`     | path  | string | yes      |            |                                                               |
+| `name`      | path  | string | yes      |            |                                                               |
+| `page`      | param | number | no       | 第几页     | 默认为 0                                                      |
+| `direction` | param | string | no       | 排序方向   | `desc` 或 `asc`，默认为 `desc`                                |
+| `sortBy`    | param | string | no       | 排序依据   | 见下                                                          |
+| `states`    | param | string | no       | Issue 状态 | 可填：`open`、`closed` 或 `open,closed`，默认为 `open,closed` |
+
+`SortBy` 的可选项：
+
+- `issueNumber`：按 Issue Number 排序，为默认选项
+- `createdAt`：按创建日期排序
+- `scaleVal`：按情感 Scale 分值排序
 
 ### 4.4 响应
 
