整理目录结构

--- a/迭代三/其他文件/前端设计文档.md
+++ b/迭代三/其他文件/前端设计文档.md
@@ -43,4 +43,6 @@
 
 ## 2.2 标注展示
 
-该部分有两个图，分别为热力图和折线图。展示 `apache/rocketmq` 两个版本中已标注的评论的相关数据。
+该部分有两个图，分别为热力图和折线图。
+
+用于展示 `apache/rocketmq` 两个版本中已标注的评论的相关数据。
