--- a/迭代三/论文笔记/论文笔记.md
+++ b/迭代三/论文笔记/论文笔记.md
@@ -8,32 +8,33 @@
 
 评论不仅仅是单词的集合，需要依据方面分析。
 
- Instead of a *bags-of-words assumption*, it classififies reviews into **five categories** and extracts aspects in sentences which include evaluation of aspect using a **pattern-based parser**.
+Instead of a _bags-of-words assumption_, it classififies reviews into **five categories** and extracts aspects in sentences which include evaluation of aspect using a **pattern-based parser**.
 
 ## INTRODUCTION
 
 - 研究目的：
+
   - 通过分析软件评论，了解用户反馈。
   - 解决现有工具的不足：只使用 bag-of-word assumption，将各个方面、主题混合，不能衡量每个方面的情绪。
 
 - 研究难点：
+
   - 用户评论数量多，无法手动检查。
   - 用户评论种类多，需要区分。
 
 - 解决方法：
   - make full use of the **monotonous structure** and **semantics** of software user reviews, and directly **parses aspect opinion pairs** from review sentences based on pre-defined sentence patterns
   - **SUR-Miner**
-  
 - contributions
-  -  a classifification technique，根据文本特性分为五个方面
+  - a classifification technique，根据文本特性分为五个方面
   - a pattern-based parsing technique，解析评论，提取方面
   - novel interactive visualizations
-  -  an empirical evaluation
+  - an empirical evaluation
 
 ## RELATED WORK
 
 - APP Review Filtering
-- Aspect Extraction from App Reviews 
+- Aspect Extraction from App Reviews
 - Review Mining in Other Marketplaces
 
 ## SUR-MINER
@@ -41,8 +42,8 @@
 six steps:
 
 1. split reviews into sentences
-2. classify each sentence into five categories: *aspect evaluation*, *praises*, *feature requests*, *bug reports* and *others*
-3. only select sentences in the *aspect evaluation* category and fifilter out other types of sentences
+2. classify each sentence into five categories: _aspect evaluation_, _praises_, _feature requests_, _bug reports_ and _others_
+3. only select sentences in the _aspect evaluation_ category and fifilter out other types of sentences
 4. extract aspects and corresponding opinions and sentiments from the set of “aspect evaluation” sentences
 5. resulting aspect-opinion-sentiment pairs are clustered and visualized with two interactive diagrams
 
@@ -70,7 +71,7 @@ six steps:
 
 ![image-20230523123846645](./images/image-20230523123846645.png)
 
-###  Step 3 - Aspect-Opinion Extraction
+### Step 3 - Aspect-Opinion Extraction
 
 问题：
 
@@ -78,7 +79,7 @@ six steps:
 
 解决方法：
 
--  SUR-Miner extracts aspect-opinion pairs (i.e., aspect and opinion words) from each review sentence classified in the *aspect evaluation* category
+- SUR-Miner extracts aspect-opinion pairs (i.e., aspect and opinion words) from each review sentence classified in the _aspect evaluation_ category
 
 ### Step 4 - Aspect Sentiment Analysis
 
@@ -95,8 +96,6 @@ We group aspect-opinion pairs with the same aspects and summarize sentiments and
   ![image-20230523150359222](./images/image-20230523150359222.png)
 
 - The **Aspect Trend Map** demonstrates the sentiment trends over time.
-
-
 
 之后的准确性验证部分与步骤三任务关系不大。
 
